# ComputerVision

./: CMakeLists.txt
include/camera/: Camera.hpp
include/detection/: FaceDetector.hpp
src/: main.cpp
src/camera/: Camera.cpp
src/detection/: FaceDetector.cpp
